--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* searchbar */
+
+.search-input {
+  background-color: #2c333a;
+  margin: 15px;
+  border-radius: 10px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  width: 100%;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+input:focus {
+  outline: none;
+}
+
+#search-icon {
+  color: #fff;
+  right: -20px;
+}
+
+/* to-do card */
+
+.card-container {
+  background-color: #2c333a;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  border-radius: 10px;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.circle {
+  padding-top: 6px;
+  padding-left: 7px;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: #9aa6b1;
+  margin: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-complete {
+  padding-top: 6px;
+  padding-left: 7px;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: #00ff00;
+  margin: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-title {
+  display: block;
+  align-items: flex-start;
+  padding: 2px;
+}
+
+.user-span {
+  background-color: #808080;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 2px;
+}
+
+.elipsis-menu {
+  margin-left: auto;
+}
+
+/* drawer */
+
+.drawer-button {
+  background-color: #00ff00;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  width: 80%;
+  height: 40px;
+}
+
+.drawer-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 5px;
+}
+
+.drawer-select {
+  width: 80%;
+  height: 40px;
+  background-color: #2c333a;
+  border-radius: 5px;
+  color: #fff;
+  border: none;
 }
