--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,3 +1,10 @@
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 5px;
+}
+
 .headline-one {
   margin-left: 10px;
   justify-content: space-between;
